api: modificacao
